# scarb

./: .gitignore  .lycheeignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  NIGHTLY_RELEASE_NOTES.md  README.md  SECURITY.md  Scarb.toml  TODO.md  clippy.toml  index.html  install.sh
extensions/cairodoc/: Cargo.toml
extensions/cairodoc/src/: main.rs
extensions/scarb-cairo-execute/: Cargo.toml
extensions/scarb-cairo-execute/src/: main.rs
extensions/scarb-cairo-execute/tests/: build.rs
extensions/scarb-cairo-language-server/: Cargo.toml  README.md
extensions/scarb-cairo-language-server/src/: main.rs
extensions/scarb-cairo-language-server/tests/: run.rs
extensions/scarb-cairo-prove/: Cargo.toml
extensions/scarb-cairo-prove/src/: main.rs
extensions/scarb-cairo-prove/tests/: build.rs
extensions/scarb-cairo-run/: Cargo.toml
extensions/scarb-cairo-run/src/: args.rs  deserialization.rs  lib.rs  main.rs
extensions/scarb-cairo-run/tests/: arguments.rs  build.rs  examples.rs
extensions/scarb-cairo-test/: Cargo.toml
extensions/scarb-cairo-test/src/: hint_processor.rs  lib.rs  main.rs
extensions/scarb-cairo-test/tests/: build.rs  examples.rs  oracles.rs
extensions/scarb-completions/: Cargo.toml
extensions/scarb-completions/src/: args.rs  lib.rs  main.rs
extensions/scarb-completions/tests/: completions.rs
extensions/scarb-doc/: Cargo.toml
extensions/scarb-doc/src/: args.rs  attributes.rs  bounding.rs  code_blocks.rs  compilation.rs  db.rs  diagnostics.rs  doc_link_resolver.rs  doc_test.rs  docs_generation.rs  documentable_formatter.rs  errors.rs  lib.rs  linking.rs  location_links.rs  main.rs  metadata.rs  render.rs  runner.rs  types.rs  versioned_json_output.rs
extensions/scarb-doc/tests/: cairo_plugin.rs  core.rs  diagnostics.rs  doc_groups.rs  doc_groups_in_reeksports.rs  doc_hidden.rs  dog_groups_in_reeksports.rs  duplicated_names.rs  features.rs  hello_world.cairo  json_target.rs  macros.rs  markdown_links.rs  markdown_target.rs  mdbook.rs  output_format.rs  reexports.rs  runnable_code_blocks.rs  runnable_examples.rs  signature.rs  source_code_linking.rs  target.rs  test.rs  visibility.rs  workspaces.rs
extensions/scarb-doc/theme/: CONTRIBUTING.md  cairo.js
extensions/scarb-execute/: Cargo.toml
extensions/scarb-execute/src/: args.rs  hint_processor.rs  lib.rs  main.rs  output.rs  profiler.rs
extensions/scarb-execute/tests/: arguments.rs  build.rs  oracles.rs  test_oracle.py
extensions/scarb-mdbook/: Cargo.toml
extensions/scarb-mdbook/src/: args.rs  lib.rs  main.rs
extensions/scarb-mdbook/tests/: build.rs
extensions/scarb-mdbook/theme/: README.md
extensions/scarb-prove/: Cargo.toml
extensions/scarb-prove/src/: args.rs  lib.rs  main.rs
extensions/scarb-prove/tests/: build.rs  heavy.rs  stwo_serial.rs
extensions/scarb-snforge-test-collector/: Cargo.toml
extensions/scarb-snforge-test-collector/src/: compilation.rs  crate_collection.rs  felt252.rs  main.rs  metadata.rs
extensions/scarb-snforge-test-collector/tests/: test.rs
extensions/scarb-verify/: Cargo.toml
extensions/scarb-verify/src/: args.rs  lib.rs  main.rs
extensions/scarb-verify/tests/: build.rs  heavy.rs  stwo_serial.rs
murek/: Cargo.toml
murek/src/: dirs.rs  lib.rs
murek/src/core/: config.rs  mod.rs  registry.rs  resolver.rs  workspace.rs
murek/src/internal/: fsx.rs  mod.rs  static_hash_cache.rs
murek/src/metadata/: metadata_version.rs  mod.rs
murek/src/ops/: clean.rs  compile.rs  mod.rs  resolve.rs  subcommands.rs  workspace.rs
murek/src/resolver/: compilation_units.rs  incompatibility.rs  incompatibility_set.rs  mod.rs  package_range.rs  package_ref.rs  pubgrub_dependency_provider.rs  pubgrub_types.rs  term.rs  version_constraint.rs
murek/src/sources/: mod.rs  path.rs
murek/tests/: build.rs  clean.rs  internal.rs  manifest_path.rs  metadata.rs  subcommand.rs
nightly/: Cargo.toml
nightly/scarb-prove/: Cargo.toml
nightly/scarb-prove/tests/: build.rs
nightly/scarb-verify/src/: main.rs
nightly/scarb-verify/tests/: build.rs
plugins/cairo-lang-macro/: CHANGELOG.md  Cargo.toml
plugins/cairo-lang-macro-attributes/: Cargo.toml  README.md
plugins/cairo-lang-macro-attributes/src/: lib.rs
plugins/cairo-lang-macro-stable/: Cargo.toml  README.md
plugins/cairo-lang-macro-stable/src/: ffi.rs  lib.rs
plugins/cairo-lang-macro/src/: lib.rs  (+1 more)
plugins/cairo-lang-quote/: Cargo.toml
plugins/scarb-macro-attributes/: Cargo.toml
plugins/scarb-macro-interface/: Cargo.toml  README.md
plugins_v2/cairo-lang-macro/: CHANGELOG.md  Cargo.toml  README.md
plugins_v2/cairo-lang-macro-stable/: Cargo.toml
scarb/: Cargo.toml  build.rs
scarb-cairo-language-server/: Cargo.toml
scarb-metadata/: CHANGELOG.md  Cargo.toml  README.md
scarb-metadata/src/: command.rs  lib.rs  packages_filter.rs  version_pin.rs
scarb-metadata/tests/: command.rs  scarb_command.rs  serialization.rs
scarb/src/: args.rs  common.rs  consts.rs  dirs.rs  flock.rs  lib.rs  process.rs  subcommands.rs  version.rs
scarb/tests/: add.rs  audits.rs  build.rs  build_assets.rs  build_cairo_plugin.rs  build_script.rs  build_starknet_contract.rs  build_starknet_contract_allowed_libfuncs.rs  build_starknet_external_contracts.rs  build_targets.rs  cache.rs  cairo_plugin_re_exports.rs  cairo_plugin_reexports.rs  check.rs  clean.rs  completions.rs  examples.rs  expand.rs  features.rs  fetch.rs  flock.rs  fmt.rs  gas_cfg.rs  git_source.rs  git_source_network.rs  http_registry.rs  incremental.rs  internal.rs  lint.rs  list.rs  local_registry.rs  lockfile.rs  lockfile_checksums.rs  manifest_path.rs  manifest_warnings.rs  metadata.rs  new_and_init.rs  package.rs  patch.rs  proc_macro.rs  (+38 more)
utils/create-output-dir/: Cargo.toml  README.md
utils/proc-macro-server-api/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: check_links.rs  create_archive.rs  get_cairo_version.rs  get_nightly_version.rs  list_binaries.rs  main.rs  nightly_release_notes.rs  set_cairo_version.rs  set_dep_version.rs  set_scarb_version.rs  sync_version.rs  upgrade.rs  verify_archive.rs
(+1297 files in other folders)
