[workspace]
members = [
    "scarb",
    "scarb-metadata",
    "extensions/scarb-cairo-language-server",
    "extensions/scarb-cairo-test",
    "extensions/scarb-doc",
    "extensions/scarb-execute",
    "extensions/scarb-mdbook",
    "extensions/scarb-prove",
    "extensions/scarb-verify",
    "plugins/cairo-lang-macro",
    "plugins/cairo-lang-macro-attributes",
    "plugins/cairo-lang-macro-stable",
    "plugins/cairo-lang-quote",
    "utils/create-output-dir",
    "utils/once-map",
    "utils/scarb-build-metadata",
    "utils/scarb-proc-macro-server-types",
    "utils/scarb-stable-hash",
    "utils/scarb-test-support",
    "utils/scarb-ui",
    "utils/test-for-each-example",
    "utils/scarb-extensions-cli",
    "utils/scarb-oracle-hint-service",
    "xtask",
]
"resolver" = "2"

[workspace.package]
version = "2.12.3"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
homepage = "https://docs.swmansion.com/scarb"
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/scarb"

[workspace.dependencies]
anyhow = "1"
assert_fs = "1"
async-trait = "0.1"
axum = { version = "0.6", features = ["http2"] }
bincode = "2.0.1"
bumpalo = "=3.17.0"
cairo-lang-casm = "*"
cairo-lang-compiler = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-doc = "*"
cairo-lang-executable = "*"
cairo-lang-executable-plugin = "*"
cairo-lang-filesystem = "*"
cairo-lang-formatter = "*"
cairo-lang-lowering = "*"
cairo-lang-macro-v1 = { version = "0.1", package = "cairo-lang-macro", features = ["serde"] }
cairo-lang-parser = "*"
cairo-lang-plugins = "*"
cairo-lang-primitive-token = "1"
cairo-lang-runner = "*"
cairo-lang-semantic = "*"
cairo-lang-sierra = "*"
cairo-lang-sierra-generator = "*"
cairo-lang-sierra-to-casm = "*"
cairo-lang-sierra-type-size = "*"
cairo-lang-starknet = "*"
cairo-lang-starknet-classes = "*"
cairo-lang-syntax = "*"
cairo-lang-test-plugin = "*"
cairo-lang-test-runner = "*"
cairo-lang-utils = { version = "*", features = ["tracing"] }
cairo-language-server = "*"
cairo-lint = "*"
cairo-vm = "2.4.1"
camino = { version = "1", features = ["serde1"] }
cargo_metadata = ">=0.18"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
console = "0.15"
convert_case = "0.8.0"
darling = "0.21"
dashmap = "6"
data-encoding = "2"
deno_task_shell = ">=0.13"
derive_builder = ">=0.12"
dialoguer = "0.11.0"
directories = "5"
dunce = "1"
expect-test = "1.5"
flate2 = { version = "1.1.4", default-features = false, features = ["zlib"] }
fs_extra = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await", "executor"] }
gix = ">=0.55"
gix-path = "0.10"
glob = "0.3"
ignore = "0.4"
include_dir = "0.7"
indicatif = "0.17"
indoc = "2"
io_tee = "0.1"
itertools = "0.14"
libc = "0.2"
libloading = "0.8.9"
linkme = "0.3"
mdbook = "0.4"
ntest = "0.9"
once_cell = "1"
pathdiff = { version = "0.2", features = ["camino"] }
petgraph = "0.7"
predicates = "3"
proc-macro2 = "1"
pubgrub = { git = "https://github.com/software-mansion-labs/pubgrub.git", branch = "dev" }
quote = "1"
ra_ap_toolchain = "0.0.218"
rayon = "1.11.0"
redb = "2.6.3"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "json", "stream", "multipart"], default-features = false }
salsa = "=0.23.0"
semver = { version = "1", features = ["serde"] }
semver-pubgrub = { git = "https://github.com/software-mansion-labs/semver-pubgrub.git" }
serde = { version = "1", features = ["serde_derive"] }
serde-untagged = "0.1"
serde-value = "0.7"
serde_json = { version = "1", features = ["raw_value"] }
serde_repr = "0.1"
serde_test = "1"
sha2 = "0.10"
shell-words = "1.1.0"
similar-asserts = { version = "1", features = ["serde"] }
smallvec = "1"
smol_str = { version = "0.3", features = ["serde"] }
snapbox = { version = "0.4", features = ["cmd", "path"] }
starknet-core = "0.16.0"
starknet-types-core = "0.2.2"
stwo-cairo-adapter = { version = "*", features = ["std"] }
stwo_cairo_prover = "*"
syn = "2"
tar = "0.4"
target-triple = "0.1"
tempfile = "3"
test-case = "3"
thiserror = "2"
thousands = "0.2"
time = "0.3"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
toml = "0.9"
toml_edit = { version = "0.23", features = ["serde"] }
tower-http = { version = "0.4", features = ["fs"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1.0.110"
typed-builder = ">=0.17"
typetag = "0.2"
url = { version = "2", features = ["serde"] }
walkdir = "2"
wasmtime = "36"
wasmtime-wasi = "36"
which = "8"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"] }
xshell = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zstd = "0.13"

[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-compiler = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-debug = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-defs = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-diagnostics = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-doc = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-eq-solver = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-executable = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-executable-plugin = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-filesystem = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-formatter = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-lowering = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-parser = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-plugins = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-proc-macros = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-project = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-runnable-utils = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-runner = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-semantic = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra-ap-change = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra-gas = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra-generator = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra-to-casm = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-sierra-type-size = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-starknet = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-starknet-classes = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-syntax = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-syntax-codegen = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-test-plugin = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-test-runner = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-test-utils = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-lang-utils = { git = "https://github.com/FroyaTheHen/cairo", rev = "8559ea82e524ba89f264f8e208946990da5f726d" }
cairo-language-server = { git = "https://github.com/software-mansion/cairols", rev = "8eb59905" }
cairo-lint = { git = "https://github.com/software-mansion/cairo-lint", rev = "94a0ac6bf5bfeb7ce9308831f52aade3293fb9bd" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "08ddec7125cd77104b3e0e3a84298a9d988778dd" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "08ddec7125cd77104b3e0e3a84298a9d988778dd" }

[profile.release]
# FIXME(#2548): We want LTO back.
#lto = true

[profile.ci]
inherits = "test"
strip = "debuginfo"
opt-level = 3
