[workspace]
members = [
    "scarb",
    "scarb-metadata",
    "extensions/scarb-cairo-language-server",
    "extensions/scarb-cairo-test",
    "extensions/scarb-doc",
    "extensions/scarb-execute",
    "extensions/scarb-mdbook",
    "extensions/scarb-prove",
    "extensions/scarb-verify",
    "plugins/cairo-lang-macro",
    "plugins/cairo-lang-macro-attributes",
    "plugins/cairo-lang-macro-stable",
    "plugins/cairo-lang-quote",
    "utils/create-output-dir",
    "utils/once-map",
    "utils/scarb-build-metadata",
    "utils/scarb-proc-macro-server-types",
    "utils/scarb-stable-hash",
    "utils/scarb-test-support",
    "utils/scarb-ui",
    "utils/test-for-each-example",
    "utils/scarb-extensions-cli",
    "utils/scarb-oracle-hint-service",
    "xtask", "utils/scarb-fs-utils",
]
"resolver" = "2"

[workspace.package]
version = "2.15.0"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
homepage = "https://docs.swmansion.com/scarb"
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/scarb"

[workspace.dependencies]
anyhow = "1"
assert_fs = "1"
async-trait = "0.1"
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio", "tracing"] }
bincode = "2.0.1"
bumpalo = "=3.17.0"
cairo-air = { git = "https://github.com/software-mansion-labs/stwo-cairo.git", rev = "d8549be8c0a5f041c9f43cdb2064785ac0596902" }
cairo-annotations = "0.7.0"
cairo-lang-casm = "2.15.0"
cairo-lang-compiler = "2.15.0"
cairo-lang-defs = "2.15.0"
cairo-lang-diagnostics = "2.15.0"
cairo-lang-doc = "2.15.0"
cairo-lang-executable = "2.15.0"
cairo-lang-executable-plugin = "2.15.0"
cairo-lang-filesystem = "2.15.0"
cairo-lang-formatter = "2.15.0"
cairo-lang-lowering = "2.15.0"
cairo-lang-macro-v1 = { version = "0.1", package = "cairo-lang-macro", features = ["serde"] }
cairo-lang-parser = "2.15.0"
cairo-lang-plugins = "2.15.0"
cairo-lang-primitive-token = "1"
cairo-lang-runner = "2.15.0"
cairo-lang-semantic = "2.15.0"
cairo-lang-sierra = "2.15.0"
cairo-lang-sierra-generator = "2.15.0"
cairo-lang-sierra-to-casm = "2.15.0"
cairo-lang-sierra-type-size = "2.15.0"
cairo-lang-starknet = "2.15.0"
cairo-lang-starknet-classes = "2.15.0"
cairo-lang-syntax = "2.15.0"
cairo-lang-test-plugin = "2.15.0"
cairo-lang-test-runner = "2.15.0"
cairo-lang-utils = { version = "2.15.0", features = ["tracing"] }
cairo-language-server = "2.15.0"
cairo-lint = "2.15.0"
cairo-program-runner-lib = { git = "https://github.com/software-mansion-labs/proving-utils.git", rev = "96f628509578b2b30d82f18ac1e0d07df9557760" }
cairo-vm = { version= "3.0.0", features = ["std"] }
camino = { version = "1", features = ["serde1"] }
cargo_metadata = ">=0.18"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
console = "0.16"
convert_case = "0"
darling = "0.23"
dashmap = "6"
data-encoding = "2"
deno_task_shell = ">=0.13"
derive_builder = ">=0.12"
dialoguer = "0.12.0"
directories = "6"
dunce = "1"
expect-test = "1.5"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
fs_extra = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await", "executor"] }
gix = { version = ">=0.73", default-features = false, features = ["revision"] }
glob = "0.3"
ignore = "0.4"
include_dir = "0.7"
indicatif = "0.18"
indoc = "2"
io_tee = "0.1"
itertools = "0.14"
libc = "0.2"
libloading = "0"
linkme = "0.3"
mdbook = "0.4"
mimalloc = "0.1.48"
ntest = "0.9"
once_cell = "1"
pathdiff = { version = "0.2", features = ["camino"] }
petgraph = "0.8"
predicates = "3"
proc-macro2 = "1"
pubgrub = { git = "https://github.com/software-mansion-labs/pubgrub.git", branch = "dev" }
quote = "1"
ra-ap-rustc_parse_format = "0"
ra_ap_toolchain = "0"
rayon = "1.11.0"
redb = "2.6.3"
salsa = "=0.24.0"
semver = { version = "1", features = ["serde"] }
semver-pubgrub = { git = "https://github.com/software-mansion-labs/semver-pubgrub.git" }
serde = { version = "1", features = ["serde_derive"] }
serde-untagged = "0.1"
serde-value = "0.7"
serde_json = { version = "1", features = ["raw_value"] }
serde_repr = "0.1"
serde_test = "1"
sha2 = "0.10"
shell-words = "1.1.0"
similar-asserts = { version = "1", features = ["serde"] }
smallvec = "1"
smol_str = { version = "=0.3.2", features = ["serde"] }
snapbox = { version = "0.6", features = ["cmd", "path", "diff"] }
starknet-core = "0.16.0"
stwo-cairo-adapter = { git = "https://github.com/software-mansion-labs/stwo-cairo.git", rev = "d8549be8c0a5f041c9f43cdb2064785ac0596902" }
stwo_cairo_prover = { git = "https://github.com/software-mansion-labs/stwo-cairo.git", rev = "d8549be8c0a5f041c9f43cdb2064785ac0596902" }
syn = { version = "2", default-features = false }
tar = "0.4"
target-triple = "1.0"
tempfile = "3"
test-case = "3"
thiserror = "2"
thousands = "0.2"
time = "0.3"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
toml = "0.9"
toml_edit = { version = "0.23", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1"
typed-builder = ">=0.17"
typetag = "0.2"
url = { version = "2", features = ["serde"] }
walkdir = "2"
wasmtime = "37"
wasmtime-wasi = "37"
which = "8"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"] }
xshell = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
zstd = "0.13"

[workspace.dependencies.reqwest]
version = "0.12"
# Disable default features and re-enable all (+ extra compression formats) except for ones defining the SSL backend.
# This backend has to be explicitly set in each crate using reqwest according to its needs.
default-features = false
features = ["gzip", "brotli", "deflate", "json", "stream", "multipart"]

[profile.release]
lto = "thin"

[profile.ci]
inherits = "test"
strip = "debuginfo"
opt-level = 3
