[workspace]
members = [
    "scarb",
    "scarb-metadata",
    "extensions/scarb-cairo-language-server",
    "extensions/scarb-cairo-test",
    "extensions/scarb-doc",
    "extensions/scarb-execute",
    "extensions/scarb-mdbook",
    "extensions/scarb-prove",
    "extensions/scarb-verify",
    "plugins/cairo-lang-macro",
    "plugins/cairo-lang-macro-attributes",
    "plugins/cairo-lang-macro-stable",
    "plugins/cairo-lang-quote",
    "utils/create-output-dir",
    "utils/scarb-build-metadata",
    "utils/scarb-proc-macro-server-types",
    "utils/scarb-stable-hash",
    "utils/scarb-test-support",
    "utils/scarb-ui",
    "utils/test-for-each-example",
    "utils/scarb-extensions-cli",
    "utils/scarb-manifest-schema",
    "utils/scarb-manifest-schema-gen",
    "utils/scarb-oracle-hint-service",
    "xtask", "utils/scarb-fs-utils",
]
"resolver" = "2"
exclude = [
    "examples/procedural_macros/example1/macro",
    "examples/procedural_macros/example2/macro",
    "examples/procedural_macros/example3/macro",
    "examples/procedural_macros/example4/macro",
]

[workspace.package]
version = "2.16.1"
edition = "2024"

authors = ["Software Mansion <contact@swmansion.com>"]
homepage = "https://docs.swmansion.com/scarb"
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/scarb"

[workspace.dependencies]
anyhow = "1"
assert_fs = "1"
async-trait = "0.1"
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio", "tracing"] }
bumpalo = "=3.17.0"
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
cairo-annotations = "0.7.0"
cairo-lang-casm = "*"
cairo-lang-compiler = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-doc = "*"
cairo-lang-executable = "*"
cairo-lang-executable-plugin = "*"
cairo-lang-filesystem = "*"
cairo-lang-formatter = "*"
cairo-lang-lowering = "*"
cairo-lang-macro-v1 = { version = "0.1", package = "cairo-lang-macro", features = ["serde"] }
cairo-lang-parser = "*"
cairo-lang-plugins = "*"
cairo-lang-primitive-token = "1"
cairo-lang-runner = "*"
cairo-lang-semantic = "*"
cairo-lang-sierra = "*"
cairo-lang-sierra-generator = "*"
cairo-lang-sierra-to-casm = "*"
cairo-lang-sierra-type-size = "*"
cairo-lang-starknet = "*"
cairo-lang-starknet-classes = "*"
cairo-lang-syntax = "*"
cairo-lang-test-plugin = "*"
cairo-lang-test-runner = "*"
cairo-lang-utils = { version = "*", features = ["tracing"] }
cairo-language-server = "*"
cairo-lint = "*"
cairo-program-runner-lib = { git = "https://github.com/software-mansion-labs/proving-utils.git", rev = "23a407177cfcc463444b3a000e0f7d3cb2c02f40" }
cairo-vm = "3.2.0"
camino = { version = "1", features = ["serde1"] }
cargo_metadata = ">=0.18"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
console = "0.16"
convert_case = "0"
darling = "0.23"
dashmap = "6"
data-encoding = "2"
deno_task_shell = ">=0.13"
derive_builder = ">=0.12"
dialoguer = "0.12.0"
directories = "6"
dunce = "1"
expect-test = "1.5"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
fs_extra = "1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await", "executor"] }
gix = { version = ">=0.73", default-features = false, features = ["revision"] }
glob = "0.3"
ignore = "0.4"
include_dir = "0.7"
indicatif = "0.18"
indoc = "2"
io_tee = "0.1"
itertools = "0.14"
libc = "0.2"
libloading = "0"
linkme = "0.3"
mdbook-driver = "0.5"
mimalloc = "0.1.48"
ntest = "0.9"
once_cell = "1"
opener = "0.8.4"
pathdiff = { version = "0.2", features = ["camino"] }
petgraph = "0.8"
postcard = { version = "1", features = ["alloc", "use-std"] }
predicates = "3"
proc-macro2 = "1"
pubgrub = { git = "https://github.com/software-mansion-labs/pubgrub.git", branch = "dev" }
quote = "1"
ra-ap-rustc_parse_format = "0"
ra_ap_toolchain = "0"
rayon = "1.12.0"
redb = "2.6.3"
salsa = "0.26.0"
schemars = { version = "1.2.1", features = ["smol_str03"] }
semver = { version = "1", features = ["serde"] }
semver-pubgrub = { git = "https://github.com/software-mansion-labs/semver-pubgrub.git" }
serde = { version = "1", features = ["serde_derive"] }
serde-untagged = "0.1"
serde-value = "0.7"
serde_json = { version = "1", features = ["raw_value"] }
serde_repr = "0.1"
serde_test = "1"
sha2 = "0.11"
shell-words = "1"
similar-asserts = { version = "2", features = ["serde"] }
smallvec = "1"
smol_str = { version = "=0.3.6", features = ["serde"] }
snapbox = { version = "1.2", features = ["cmd", "path", "diff"] }
starknet-core = "0.16.0"
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
stwo-cairo-prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
syn = { version = "2", default-features = false }
tar = "0.4"
target-triple = "1.0"
tempfile = "3"
test-case = "3"
thiserror = "2"
thousands = "0.2"
time = "0.3"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
toml = "1"
toml_edit = { version = "0.25", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1"
typed-builder = ">=0.17"
typetag = "0.2"
url = { version = "2", features = ["serde"] }
uv-once-map = "0"
walkdir = "2"
wasmtime = "39"
wasmtime-wasi = "39"
which = "8"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System", "Win32_System_Console"] }
xshell = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"

[workspace.dependencies.reqwest]
version = "0.12"
# Disable default features and re-enable all (+ extra compression formats) except for ones defining the SSL backend.
# This backend has to be explicitly set in each crate using reqwest according to its needs.
default-features = false
features = ["gzip", "brotli", "deflate", "json", "stream", "multipart"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "test"
strip = "debuginfo"
opt-level = 3

[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-doc = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-executable = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-executable-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-execute-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-runnable-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-test-runner = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64fe9abccc52dbf2709812b88fa6a6bb10f66a9f" }
cairo-language-common = { git = "https://github.com/software-mansion/cairo-language-common" , rev = "e780ac2be99edda452643a8edb4b10acc7adccf1" }
cairo-language-server = { git = "https://github.com/software-mansion/cairols", rev = "1c6e2b0d814ce17e5e92cf47066e044638649e5c" }
cairo-lint = { git = "https://github.com/software-mansion/cairo-lint/", rev = "c3c715d093f86ab630e748120d72c9d276e82247" }
