[package]
name = "murek"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-compiler.workspace = true
clap-verbosity-flag.workspace = true
clap.workspace = true
create-output-dir = { path = "../utils/create-output-dir" }
directories.workspace = true
dunce.workspace = true
itertools.workspace = true
once_cell.workspace = true
petgraph.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
which.workspace = true

[dev-dependencies]
assert_fs.workspace = true
indoc.workspace = true
libc.workspace = true
predicates.workspace = true
serde_test.workspace = true
snapbox.workspace = true
test-case.workspace = true
