[package]
name = "scarb-metadata"
version = "1.13.0"
edition.workspace = true

authors.workspace = true
categories = ["development-tools"]
description = "Structured access to the output of `scarb metadata`"
homepage.workspace = true
keywords = ["cairo-lang", "starknet", "scarb"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
camino.workspace = true
derive_builder = { workspace = true, optional = true }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }

[dev-dependencies]
assert_fs.workspace = true
cairo-lang-filesystem.workspace = true
snapbox.workspace = true

[features]
default = ["command"]
builder = ["dep:derive_builder"]
command = ["dep:thiserror"]
