[package]
name = "scarb"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
description = "The Cairo package manager"
homepage.workspace = true
keywords = ["cairo-lang", "starknet", "scarb"]
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-formatter.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
camino.workspace = true
clap-verbosity-flag.workspace = true
clap.workspace = true
create-output-dir = { path = "../utils/create-output-dir" }
data-encoding.workspace = true
deno_task_shell.workspace = true
derive_builder.workspace = true
diffy.workspace = true
directories.workspace = true
dunce.workspace = true
fs4.workspace = true
futures.workspace = true
gix.workspace = true
glob.workspace = true
ignore.workspace = true
include_dir.workspace = true
indoc.workspace = true
itertools.workspace = true
once_cell.workspace = true
pathdiff.workspace = true
petgraph.workspace = true
scarb-build-metadata = { path = "../utils/scarb-build-metadata" }
scarb-metadata = { path = "../scarb-metadata", default-features = false, features = ["builder", "packages_filter"] }
scarb-ui = { path = "../utils/scarb-ui" }
semver.workspace = true
serde-value.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typed-builder.workspace = true
url.workspace = true
walkdir.workspace = true
which.workspace = true
xxhash-rust.workspace = true
zip.workspace = true

[dev-dependencies]
assert_fs.workspace = true
io_tee.workspace = true
libc.workspace = true
ntest.workspace = true
predicates.workspace = true
scarb-test-support = { path = "../utils/scarb-test-support" }
serde_test.workspace = true
similar-asserts.workspace = true
snapbox.workspace = true
test-case.workspace = true
test-for-each-example = { path = "../utils/test-for-each-example" }

[build-dependencies]
scarb-build-metadata = { path = "../utils/scarb-build-metadata" }
toml.workspace = true
zip.workspace = true
